# stock-analyzer

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_news_impact_model.py  003_stock_relations.py  004_observed_news_reaction.py  004_portfolio_holdings.py  005_repair_observed_news_reaction_columns.py  006_portfolio_holdings.py  007_alert_rules.py
app/: main.py
app/analysis/: accuracy.py  analyst_config.py  analyzer.py  claude_runner.py  memory.py  news_impact.py  ontology.py  prompts.py  reflection.py  sentiment.py  technical.py
app/collectors/: dart_collector.py  krx_collector.py  news_collector.py  us_collector.py
app/core/: auth.py  config.py  logging_config.py
app/database/: models.py  session.py
app/routers/: alerts.py  backtests.py  health.py  portfolio.py  screener.py  stocks.py
app/scheduler/: jobs.py  scheduler.py
app/service/: alerts_service.py  backtest_service.py  (+1 more)
deploy/: caddy-stock.conf  remote-deploy.sh  setup.sh
docs/: ROADMAP.md
frontend/: Dockerfile  package-lock.json  package.json
scripts/: backfill_news_impact.py
tests/: conftest.py  test_accuracy_contract.py  test_analysis_history_contract.py  test_backtest_alerts_contract.py  test_latest_analysis_contract.py  test_migrations.py  test_news_impact.py  test_news_impact_contract.py  test_portfolio_contract.py  test_screener_contract.py  test_stock_detail_contract.py  test_us_support_contract.py
(+27 files in other folders)
